<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arm_teensy_hardware</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="shreyaspatel517@gmail.com">shreyas</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>

  <export>
    <pluginlib plugin_manifest="arm_teensy_hardware_plugins.xml"/>
  </export>

</package>
